# radar_obstacle_avoidance

./: .gitignore  CMakeLists.txt  README.md  package.xml  start_system.sh
config/: bev_fusion.yaml  camera_config.yaml  feature_detector.yaml  fusion_strategy.yaml  hesai_config.yaml  remap_config.yaml  rtk_gps.yaml
config/fast_livo2_configs/: avia.yaml
config/fast_livo2_configs/launch/: mapping_avia.launch
include/radar_obstacle_avoidance/: feature_detector.h  remap_manager.h  rtk_gps_parser.h
launch/: camera_intrinsic_calibration.launch  feature_detection.launch  full_system.launch  lidar_camera_calibration.launch  radar_processor.launch  rtk_gps.launch  vision_system.launch
msg/: Obstacle3D.msg  Obstacle3DArray.msg  PathPlanning.msg  RTKData.msg  RTKEvent.msg  RemapCommand.msg
rviz/: fiesta_view.rviz  full_system.rviz
scripts/: align_to_global_frame.py  bev_fusion_node.py  bev_visualizer.py  calibrate_camera_lidar.py  calibrate_tilt.sh  deploy_system.sh  fiesta_bridge_node.py  gps_to_pose.py  install_vision_deps.sh  livo_odom_bridge.py  object_tracker_node.py  point_world_converter.py  pointcloud_relay.py  rtk_checker.py  rtk_monitor.py  sensor_fusion_node.py  static_tf_fallback.py  test_all_stages.py  test_calibration.py  test_rtk_conversion.py  test_vision.py  tf_to_transformstamped.py  yaw_corrector.py  yolo_detector_node.py
src/: feature_detector.cpp  feature_detector_main.cpp  pointcloud_processor.cpp  pointcloud_relay.cpp  remap_manager.cpp  remap_manager_main.cpp  rtk_gps_main.cpp  rtk_gps_parser.cpp  system_monitor.cpp  time_sync_node.cpp
