<?xml version="1.0"?>
<package format="2">
  <name>radar_obstacle_avoidance</name>
  <version>1.0.0</version>
  <description>无人机雷达避障系统</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>message_filters</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>diagnostic_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geodesy</depend>
  <depend>serial</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
</package>
